testsuite/tests/semantic_errors/missing_entity/test.adb
procedure Test is
   X : Integer := Foo (True);
   pragma Test_Statement;
begin
   null;
end Test;
