testsuite/tests/semantic_errors/missing_entity/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["X"] test.adb:2:4-2:30>
*************************************************************

test.adb:2:19: error: cannot find name 'Foo'
2 |    X : Integer := Foo (True);
  |                   ^^^


Expected name resolution failure for node <ObjectDecl ["X"] test.adb:2:4-2:30>


Done.
